# mirea-microservices-tasks

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml
migrations/2022-11-23-183352_create_tasks/: down.sql  up.sql
src/: main.rs  schema.rs  utils.rs
src/data/: mod.rs  model.rs  repository.rs
src/route/: health.rs  mod.rs  task.rs
