[package]
name = "mirea-microservices-tasks"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
axum = "0.6.1"
tower-http = { version = "0.3.5", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-gelf = "0.7.1"
anyhow = "1.0.66"
dotenv = "0.15.0"
derive_more = "0.99.17"
async-trait = "0.1.59"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
uuid = { version = "1.2.2", features = ["serde", "v4"] }
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.2", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "2.0.0"
diesel-derive-enum = { version = "2.0.0-rc.0", features = ["postgres"] }
